Downgrade a Java 8 y upgrade a Gradle 5.0