@@ -3,15 +3,7 @@ import org.gradle.internal.os.OperatingSystem
 plugins {
     java
     application
-    id("com.google.osdetector") version "1.6.0"
     id("com.github.ben-manes.versions") version "0.20.0"
-}
-
-val jfxVersion: String by project
-val platform: String = when (val os = osdetector.os) {
-    "windows" -> "win"
-    "osx" -> "mac"
-    else -> os
 }
 
 group = "es.uji.ei1048"
@@ -22,11 +14,6 @@ repositories {
 }
 
 dependencies {
-    implementation("org.openjfx:javafx-base:$jfxVersion:$platform")
-    implementation("org.openjfx:javafx-graphics:$jfxVersion:$platform")
-    implementation("org.openjfx:javafx-controls:$jfxVersion:$platform")
-    implementation("org.openjfx:javafx-fxml:$jfxVersion:$platform")
-
     testImplementation("org.junit.jupiter:junit-jupiter-engine:5.3.1")
 }
 
@@ -35,28 +22,6 @@ application {
 }
 
 tasks.withType<JavaCompile> {
-    sourceCompatibility = "11"
-    targetCompatibility = "11"
-
-    doFirst {
-        options.compilerArgs = listOf(
-            "--module-path", classpath.asPath,
-            "--add-modules", "javafx.base",
-            "--add-modules", "javafx.graphics",
-            "--add-modules", "javafx.controls",
-            "--add-modules", "javafx.fxml"
-        )
-    }
-}
-
-tasks.withType<JavaExec> {
-    doFirst {
-        jvmArgs = listOf(
-            "--module-path", classpath.asPath,
-            "--add-modules", "javafx.base",
-            "--add-modules", "javafx.graphics",
-            "--add-modules", "javafx.controls",
-            "--add-modules", "javafx.fxml"
-        )
-    }
+    sourceCompatibility = "8"
+    targetCompatibility = "8"
 }
